[gd_scene load_steps=17 format=3 uid="uid://b71ncatkusv7y"]

[ext_resource type="Script" uid="uid://bcpa4hjtwjj3b" path="res://Scenes/settings.gd" id="1_4geyq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4geyq"]
bg_color = Color(0.9104825, 0.7380532, 0.7985285, 1)

[sub_resource type="DPITexture" id="DPITexture_4geyq"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#fefefe\" fill-opacity=\".75\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_i44u3"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#fefefe\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_lhmql"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#fefefe\" fill-opacity=\".37\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_aaqfp"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"4\" height=\"8\"><path fill=\"#fff\" fill-opacity=\".25\" d=\"M1 0h2v16H1z\"/></svg>
"
base_scale = 3.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_i44u3"]
color = Color(0, 0, 0, 0.2627451)
grow_begin = 0.0
thickness = 36

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaqfp"]
bg_color = Color(0.6805639, 0.5259063, 0.7951901, 1)

[sub_resource type="DPITexture" id="DPITexture_j2dne"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><rect width=\"14\" height=\"14\" x=\"1\" y=\"1\" fill=\"#fff\" fill-opacity=\".75\" rx=\"2.333\"/><path fill=\"#1a1a1a\" d=\"m11.5 3.75-5.6 5.6-1.7-1.7-1.5 1.5 3.2 3.2 7.1-7.1z\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_6kysc"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><rect width=\"14\" height=\"14\" x=\"1\" y=\"1\" fill=\"#1a1a1a\" fill-opacity=\".5\" rx=\"2.333\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_6vr2p"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"5.5\" fill=\"#1a1a1a\" stroke=\"#fff\" stroke-opacity=\".75\" stroke-width=\"3\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_f60ng"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#1a1a1a\" fill-opacity=\".5\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_bismi"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><rect width=\"14\" height=\"14\" x=\"1\" y=\"1\" fill=\"#fff\" fill-opacity=\".37\" rx=\"2.333\"/><path fill=\"#1a1a1a\" fill-opacity=\".5\" d=\"m11.5 3.75-5.6 5.6-1.7-1.7-1.5 1.5 3.2 3.2 7.1-7.1z\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_rgw85"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><rect width=\"14\" height=\"14\" x=\"1\" y=\"1\" fill=\"#1a1a1a\" fill-opacity=\".25\" rx=\"2.333\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_l7vst"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#fff\" fill-opacity=\".37\"/><circle cx=\"8\" cy=\"8\" r=\"4\" fill=\"#1a1a1a\" fill-opacity=\".5\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_35cvv"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#1a1a1a\" fill-opacity=\".25\"/></svg>
"
base_scale = 3.0

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_4geyq")

[node name="Settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 652.0

[node name="Panel" type="Panel" parent="Settings"]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4geyq")

[node name="Button" type="Button" parent="Settings/Panel"]
layout_mode = 0
offset_left = 716.0
offset_top = 515.0
offset_right = 1125.3905
offset_bottom = 601.0
theme_override_font_sizes/font_size = 57
text = "Take me back"

[node name="Volume" type="HSlider" parent="."]
offset_left = 41.0
offset_top = 243.0
offset_right = 343.0
offset_bottom = 294.0
theme_override_icons/grabber = SubResource("DPITexture_4geyq")
theme_override_icons/grabber_highlight = SubResource("DPITexture_i44u3")
theme_override_icons/grabber_disabled = SubResource("DPITexture_lhmql")
theme_override_icons/tick = SubResource("DPITexture_aaqfp")
theme_override_styles/slider = SubResource("StyleBoxLine_i44u3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_aaqfp")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_aaqfp")

[node name="volume_label" type="Label" parent="."]
offset_left = 41.0
offset_top = 176.0
offset_right = 612.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 46
text = "Volume"

[node name="settingslabel" type="Label" parent="."]
offset_left = 32.0
offset_top = -10.0
offset_right = 603.0
offset_bottom = 183.0
theme_override_font_sizes/font_size = 141
text = "Settings"

[node name="Mute" type="CheckBox" parent="."]
offset_left = 36.0
offset_top = 288.0
offset_right = 212.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 46
theme_override_icons/checked = SubResource("DPITexture_j2dne")
theme_override_icons/unchecked = SubResource("DPITexture_6kysc")
theme_override_icons/radio_checked = SubResource("DPITexture_6vr2p")
theme_override_icons/radio_unchecked = SubResource("DPITexture_f60ng")
theme_override_icons/checked_disabled = SubResource("DPITexture_bismi")
theme_override_icons/unchecked_disabled = SubResource("DPITexture_rgw85")
theme_override_icons/radio_checked_disabled = SubResource("DPITexture_l7vst")
theme_override_icons/radio_unchecked_disabled = SubResource("DPITexture_35cvv")
text = "Mute"

[connection signal="pressed" from="Settings/Panel/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Mute" to="." method="_on_mute_toggled"]
